<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:saveEnabled="true" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scan_button"
                android:text="@string/scan_button" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/other_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/eancontainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:textIsSelectable="true"
                android:textSize="@dimen/head_line"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="3" />

            <TextView
                android:id="@+id/authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:textSize="@dimen/small_fontsize" />

            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/book_cover" />

            <TextView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/small_fontsize" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/cancel_button"
                    android:drawableLeft="@drawable/ic_action_discard"
                    android:drawableStart="@drawable/ic_action_discard"
                    android:text="@string/cancel_button"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/save_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:contentDescription="@string/ok_button"
                    android:drawableLeft="@drawable/ic_action_accept"
                    android:drawableStart="@drawable/ic_action_accept"
                    android:text="@string/ok_button"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
